--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,17 +2,61 @@
     margin: 0 auto;
     width: 1080px;
 
+    &__topnav {
+        text-align: right;
+    }
+
     &__search {
-        h1 {
-            width: 280px;
+        a {
+            vertical-align: middle;
         }
 
-        h2 {
-            display: none;
+        &--title {
+            position: relative;
+            top: -4px;
+            width: 198px;
+            height: 48px;
+            display: inline-block;
+            background: url('../assets/sp_search.png') -4px -4px no-repeat;
+            text-indent: 100%;
+            overflow: hidden;
         }
 
         fieldset {
-            width: 520px;
+            position: relative;
+            margin-left: 20px;
+            padding: 12px 0 12px 10px;
+            width: 521px;
+            height: 49px;
+            display: inline-block;
+            border: 2px solid $color-primary;
+            vertical-align: middle;
+        }
+
+        &--input {
+            vertical-align: top;
+            width: 405px;
+            height: 23px;
+        }
+
+        &--btn {
+            cursor: pointer;
+            width: 49px;
+            height: 49px;
+            background-color: $color-primary;
+            position: absolute;
+            right: -2px;
+            top: -2px;
+        }
+
+        &--image {
+            width: 21px;
+            height: 21px;
+            background-image: url('../assets/sp_search.png');
+            background-position: -3px -60px;
+            background-repeat: no-repeat;
+            display: inline-block;
+            margin: 14px;
         }
     }
 }
