--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,6 +1,5 @@
 .header {
-    margin: 0 auto;
-    width: 1080px;
+    @include h-centered(1080px);
 
     &__topnav {
         text-align: right;
@@ -12,11 +11,11 @@
         }
 
         &--title {
+            @include relative($top: -4px);
             background: url('../assets/sp_search.png') -4px -4px no-repeat;
             display: inline-block;
             height: 48px;
             overflow: hidden;
-            position: relative;
             text-indent: 100%;
             top: -4px;
             width: 198px;
@@ -40,23 +39,18 @@
         }
 
         &--btn {
+            @include absolute($right: -2px, $top: -2px);
             background-color: $color-primary;
             cursor: pointer;
             height: 49px;
-            position: absolute;
-            right: -2px;
-            top: -2px;
             width: 49px;
         }
 
         &--image {
-            background-image: url('../assets/sp_search.png');
-            background-position: -3px -60px;
-            background-repeat: no-repeat;
+            @include h-centered(21px);
+            background: url('../assets/sp_search.png') -3px -60px no-repeat;
             display: inline-block;
             height: 21px;
-            margin: 14px;
-            width: 21px;
         }
     }
 }
