--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,8 @@
 @import 'abstracts/variables';
+@import 'abstracts/mixins';
 
 @import 'base/reset';
 @import 'base/utilities';
 
 @import 'layout/header';
+@import 'layout/nav';
