--- a/src/scss/base/_utilities.scss
+++ b/src/scss/base/_utilities.scss
@@ -1,8 +1,7 @@
 .blind {
+    @include size(1px, 1px);
     clip: rect(0 0 0 0);
-    height: 1px;
     margin: -1px;
     overflow: hidden;
     position: absolute;
-    width: 1px;
 }
