--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -23,3 +23,9 @@
     margin: 0 auto;
     width: $width;
 }
+
+@mixin sp($url, $width, $height, $x, $y) {
+    @include size($width, $height);
+    background: url(#{$url}) $x $y no-repeat;
+    display: inline-block;
+}
