--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,1 +1,6 @@
 $color-primary: #03cf5d;
+$color-darkgray: #888;
+$color-gray: #d1d8e4;
+$color-lightgray: #f1f3f6;
+$color-main-bg: #f2f4f7;
+$color-white: #fff;
