--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -8,13 +8,15 @@
 
 body {
     box-sizing: border-box;
+    font-family: Dotum, '돋움', Helvetica, 'Apple SD Gothic Neo', sans-serif;
 }
 
 a {
     text-decoration: none;
 }
 
-ul {
+ul,
+ol {
     list-style: none;
 }
 
