--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -18,7 +18,8 @@
     }
 
     &__ranking {
-        @include absolute($top: 16px, $right: 100px);
+        @include absolute($top: 14px, $right: 0);
+        @include size(198px, 20px);
 
         &--number {
             color: $color-primary;
@@ -30,9 +31,113 @@
             font-size: 14px;
             letter-spacing: -1px;
         }
+
+        &:hover .nav__detail {
+            display: block;
+        }
     }
 
-    ul {
+    &__detail {
+        @include absolute($top: -15px, $right: 0);
+        @include size(330px, 332px);
+        background-color: $color-white;
+        border: 1px solid $color-gray;
+        display: none;
+        padding: 16px;
+        z-index: 100;
+
+        &--top {
+            @include relative();
+            margin-bottom: 12px;
+
+            h3 {
+                display: inline-block;
+                font-size: 14px;
+                letter-spacing: -1px;
+                line-height: 17px;
+            }
+
+            div {
+                @include absolute($right: 0);
+                display: inline-block;
+            }
+
+            span {
+                color: $color-darkgray;
+                font-size: 12px;
+
+                &:nth-of-type(2) {
+                    color: $color-gray;
+                    margin: 0 1px;
+                }
+            }
+        }
+
+        &--nav {
+            border: 1px solid $color-gray;
+            margin-bottom: 6px;
+
+            div {
+                @include size(50%);
+                display: inline-block;
+                padding: 4px;
+
+                &:nth-of-type(2) {
+                    background-color: $color-lightgray;
+                    color: $color-darkgray;
+                }
+
+                h4 {
+                    font-size: 12px;
+                    font-weight: normal;
+                    text-align: center;
+                }
+            }
+        }
+
+        &--list {
+            border-bottom: 1px solid $color-lightgray;
+            margin-bottom: 4px;
+            padding-bottom: 4px;
+
+            li {
+                margin-bottom: 4px;
+
+                span:first-child {
+                    @include size(16px);
+                    display: inline-block;
+                    font-size: 14px;
+                    text-align: center;
+                }
+
+                span:last-child {
+                    font-size: 12px;
+                    margin-left: 6px;
+                }
+            }
+        }
+
+        &--footer {
+            div {
+                @include size(50%);
+                color: $color-darkgray;
+                display: inline-block;
+            }
+
+            div:first-child {
+                font-size: 11px;
+                vertical-align: center;
+            }
+
+            div:last-child {
+                font-size: 12px;
+                letter-spacing: -1px;
+                text-align: right;
+            }
+        }
+    }
+
+    &__menu {
         display: inline-block;
         padding: 16px 0 0 4px;
 
@@ -59,6 +164,14 @@
             &:not(:nth-child(1)) {
                 margin-left: 14px;
             }
+        }
+    }
+
+    &__more {
+        display: inline-block;
+
+        &--icon {
+            @include nth-sp(1, 55px, 0, -104px);
         }
     }
 }
