--- a/src/scss/page/_home.scss
+++ b/src/scss/page/_home.scss
@@ -1,8 +1,13 @@
 @mixin block($args...) {
     @include size($args...);
     background-color: $color-white;
+    border: 1px solid $color-gray;
     display: inline-block;
     vertical-align: top;
+}
+
+@mixin sp-login($args...) {
+    @include sp('../assets/sp_login.png', $args...);
 }
 
 .main {
@@ -24,6 +29,43 @@
 
         &--login {
             @include block(332px, 120px);
+        }
+
+        .login {
+            padding: 12px 25px;
+
+            &__helper-text {
+                color: $color-darkgray;
+                font-size: 12px;
+                line-height: 14px;
+            }
+
+            &__btn {
+                display: block;
+                margin-top: 11px;
+
+                span:first-child {
+                    @include sp-login(280px, 37px, 0, -47px);
+                    display: inline-block;
+                }
+            }
+        }
+
+        .help,
+        .signup {
+            color: $color-darkgray;
+            float: left;
+            font-size: 12px;
+            line-height: 38px;
+            margin-top: -2px;
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+
+        .signup {
+            float: right;
         }
     }
 
