--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -2,5 +2,6 @@ $color-primary: #03cf5d;
 $color-darkgray: #888;
 $color-gray: #d1d8e4;
 $color-lightgray: #f1f3f6;
+$color-orange: #ee8c3f;
 $color-main-bg: #f2f4f7;
 $color-white: #fff;
