style(footer): add footer styles

--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -24,6 +24,7 @@
         &--number {
             color: $color-primary;
             font-size: 16px;
+            margin: -9px 8px 0 0;
             margin-top: -9px;
         }
 
